--- a/Day-02/index.html
+++ b/Day-02/index.html
@@ -43,23 +43,23 @@
                 <h2>Image Gallery</h2>
 
                 <div class="images image-set1">
-                    <img src="../Wallpapers/pexels-asadphoto-1450360.jpg" alt="img1">
-                    <img src="../Wallpapers/pexels-bri-schneiter-28802-346529.jpg" alt="img2">
+                    <img src="Wallpapers/pexels-asadphoto-1450360.jpg" alt="img1">
+                    <img src="Wallpapers/pexels-bri-schneiter-28802-346529.jpg" alt="img2">
                 </div>
 
                 <div class="images image-set2">
-                    <img src="../Wallpapers/pexels-bri-schneiter-28802-346529.jpg" alt="img3">
-                    <img src="../Wallpapers/pexels-asadphoto-1450360.jpg" alt="img4">
+                    <img src="Wallpapers/pexels-bri-schneiter-28802-346529.jpg" alt="img3">
+                    <img src="Wallpapers/pexels-asadphoto-1450360.jpg" alt="img4">
                 </div>
 
                 <div class="images image-set3">
-                    <img src="../Wallpapers/pexels-asadphoto-1450360.jpg" alt="img5">
-                    <img src="../Wallpapers/pexels-bri-schneiter-28802-346529.jpg" alt="img6">
+                    <img src="Wallpapers/pexels-asadphoto-1450360.jpg" alt="img5">
+                    <img src="Wallpapers/pexels-bri-schneiter-28802-346529.jpg" alt="img6">
                 </div>
 
                 <div class="images image-set4">
-                    <img src="../Wallpapers/pexels-bri-schneiter-28802-346529.jpg" alt="img7">
-                    <img src="../Wallpapers/pexels-asadphoto-1450360.jpg" alt="img8">
+                    <img src="Wallpapers/pexels-bri-schneiter-28802-346529.jpg" alt="img7">
+                    <img src="Wallpapers/pexels-asadphoto-1450360.jpg" alt="img8">
                 </div>
             </section>
         </main>
