Day - 02 Project code updated

--- a/Day-02/index.html
+++ b/Day-02/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Gallery - Visual Poetry</title>
     <link rel="stylesheet" href="style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +21,7 @@
         <div class="nav-container">
             <a href="#" class="logo-container">
                 <div class="logo-circle">
-                    <span class="logo-text">EG</span>
+                    <span class="logo-text">SS</span>
                 </div>
                 <h2 class="nav-title">Gallery</h2>
             </a>
